--- a/lib/l10n/intl_eu.arb
+++ b/lib/l10n/intl_eu.arb
@@ -111,5 +111,14 @@
   "number_of_posts": "{count,plural, =1{Bidalketa {count}} other{{count} bidalketa}}",
   "number_of_subscribers": "{count,plural, =1{Harpidetu {count}} other{{count} harpidetu}}",
   "unsubscribe": "Ezabatu harpidetza",
-  "subscribe": "Harpidetu"
+  "subscribe": "Harpidetu",
+  "number_of_users": "{count,plural, =1{Erabiltzaile {count}} other{{count} erabiltzaile}}",
+  "messages": "Mezuak",
+  "banned_users": "Debekatutako erabiltzaileak",
+  "delete_account_confirm": "Abisua: honek zure datu guztiak betirako ezabatu ditu. Sartu zure pasahitza baieztatzeko.",
+  "new_password": "Pasahitz berria",
+  "verify_password": "Balioztatu pasahitza",
+  "old_password": "Aurreko pasahitza",
+  "show_avatars": "Erakutsi avatarrak",
+  "search": "Bilatu"
 }
