--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -107,5 +107,13 @@
   "email_already_exists": "E-mail уже существует.",
   "user_already_exists": "Пользователь уже существует.",
   "unsubscribe": "Отписаться",
-  "subscribe": "Подписаться"
+  "subscribe": "Подписаться",
+  "messages": "Сообщения",
+  "banned_users": "Забаненные пользователи",
+  "delete_account_confirm": "Предупреждение: это действие полностью уничтожит все данные вашего аккаунта. Введите свой пароль для подтверждения.",
+  "new_password": "Новый пароль",
+  "verify_password": "Повторите пароль",
+  "old_password": "Действующий пароль",
+  "show_avatars": "Показывать аватары",
+  "search": "Поиск"
 }
