--- a/lib/l10n/intl_sq.arb
+++ b/lib/l10n/intl_sq.arb
@@ -97,5 +97,14 @@
   "number_of_posts": "{count,plural, =1{{count} Postim} other{{count} Postime}}",
   "number_of_subscribers": "{count,plural, =1{{count} i abonuar} other{{count} të abonuar}}",
   "unsubscribe": "Ndalo Abonimin",
-  "subscribe": "Abonohu"
+  "subscribe": "Abonohu",
+  "number_of_users": "{count,plural, =1{{count} Përdorues} other{{count} Përdoruesa}}",
+  "messages": "Mesazhet",
+  "banned_users": "Pëdoruesit e dëbuar",
+  "delete_account_confirm": "Paralajmërim: kjo do të fshij të gjitha të dhënat e juaja përgjithmonë. Shtyp fjalëkalimin tënd për ta konfirmuar.",
+  "new_password": "Fjalëkalimi i ri",
+  "verify_password": "Konfirmo Fjalëkalimin",
+  "old_password": "Fjalëkalimi i vjetër",
+  "show_avatars": "Shfaq fotot e profilit",
+  "search": "Kërko"
 }
