--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -107,5 +107,14 @@
   "number_of_posts": "{count,plural, =1{{count} Beitrag} other{{count} Beiträge}}",
   "number_of_subscribers": "{count,plural, =1{{count} Abonnent} other{{count} Abonnent*innen}}",
   "unsubscribe": "Deabonnieren",
-  "subscribe": "Abonnieren"
+  "subscribe": "Abonnieren",
+  "number_of_users": "{count,plural, =1{{count} Benutzer} other{{count} Benutzer*innen}}",
+  "messages": "Nachrichten",
+  "banned_users": "Gebannte Benutzer",
+  "delete_account_confirm": "Achtung: Dadurch werden alle Ihre Daten dauerhaft gelöscht. Geben Sie zur Bestätigung Ihr Passwort ein.",
+  "new_password": "Neues Passwort",
+  "verify_password": "Passwort überprüfen",
+  "old_password": "Letztes Passwort",
+  "show_avatars": "Avatare anzeigen",
+  "search": "Suchen"
 }
