--- a/lib/l10n/intl_el.arb
+++ b/lib/l10n/intl_el.arb
@@ -111,5 +111,14 @@
   "number_of_posts": "{count,plural, =1{{count} Δημοσίευση} other{{count} Δημοσιεύσεις}}",
   "number_of_subscribers": "{count,plural, =1{{count} εγγεγραμμένος} other{{count} εγγεγραμμένοι}}",
   "unsubscribe": "Απεγγραφή",
-  "subscribe": "Εγγραφή"
+  "subscribe": "Εγγραφή",
+  "number_of_users": "{count,plural, =1{{count} χρήστης} other{{count} χρήστες}}",
+  "messages": "Μηνύματα",
+  "banned_users": "Αποβεβλημένοι χρήστες",
+  "delete_account_confirm": "Προσοχή: αυτό θα διαγράψει όλα τα δεδομένα σας. Είσαγετε τον κωδικό σας για επιβεβαίωση.",
+  "new_password": "Νέος κωδικός",
+  "verify_password": "Επαλήθευση κωδικού",
+  "old_password": "Παλιός κωδικός",
+  "show_avatars": "Εμφάνιση των άβαταρς",
+  "search": "Αναζήτηση"
 }
