--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -99,5 +99,13 @@
   "number_of_posts": "{count,plural, =1{{count} 件の投稿}}",
   "number_of_subscribers": "{count,plural, =1{{count} 名の登録者}}",
   "unsubscribe": "登録解除",
-  "subscribe": "登録"
+  "subscribe": "登録",
+  "number_of_users": "{count,plural, =1{{count} 名のユーザー}}",
+  "messages": "メッセージ",
+  "delete_account_confirm": "警告: あなたのデータを全て恒久的に削除します。確認のためパスワードを入力してください。",
+  "new_password": "新しいパスワード",
+  "verify_password": "パスワードの確認",
+  "old_password": "現在のパスワード",
+  "show_avatars": "アバターを表示",
+  "search": "検索"
 }
